edit the MainBody component so that the cards have stable keys, fixing viewport jumping bug on mobile devices

--- a/src/styles/Mainbody.css
+++ b/src/styles/Mainbody.css
@@ -5,6 +5,7 @@
     flex-wrap: wrap;
     justify-content: center;
     min-height: calc(100vh - 123px);
+    max-width: 1440px;
     align-items: center;
 }
 
