--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -25,6 +25,9 @@
 
 body {
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 * {
